--- a/csstyles.css
+++ b/csstyles.css
@@ -5,32 +5,147 @@ body{
 
 h1{
     color: #2E2000;
-    font-size: 70px;
+    font-size: 80px;
+    font-family: 'Abril Fatface';
+    letter-spacing: .5px;
+    line-height: .5;
+    font-style: normal;
+    margin-top: 5%;
+    margin-bottom: 4%;
+}
+
+#phrase-container{
+    color: #2E2000;
+    font-size: 80px;
+    font-family: 'Abril Fatface';
+    letter-spacing: .5px;
+    line-height: 1;
+    font-style: normal;
+    margin-top: 5%;
+    margin-bottom: .5%;
+}
+
+h2{
+    font-family: 'Avenir', sans-serif;
+    font-size: 40px;
+    line-height: 1;
+    margin-bottom: 2%;
+}
+
+h3{
+    color: #2E2000;
+    font-size: 30px;
     font-family: 'Abril Fatface';
     letter-spacing: .5px;
     font-style: normal;
 }
 
-h2{
-    font-family: 'Sen', sans-serif;
-    font-weight: bold;
-    font-size: 30px;
+h4{
+    font-family: 'Avenir', sans-serif;
+    font-size: 16px;
+    margin-bottom: -4%;
 }
 
-h3{
+h5{
+    font-family: 'Avenir', sans-serif;
+    font-size: 18px;
+    margin-bottom: 10%;
+    margin-top: 10%;
+}
+
+h6{
+    color: #2E2000;
+    font-size: 35px;
+    font-family: 'Abril Fatface';
+    letter-spacing: .5px;
+    font-style: normal;
+}
+
+nav{
+    background-color: #FEFCEF;
+    color: #2E2000;
     font-family: 'Sen', sans-serif;
     font-size: 16px;
+    text-align: right;
+    padding: 50px 200px;
+    gap: 14px;
 }
 
-.container{
-    width: 300px;
-    height: 200px;
-    border: 1px solid #ccc;
-    overflow: hidden;
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.container img {
-    width: 100%;
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+.flex-container{
+    display: flex;
+    gap: 15px;
+}
+
+.header {
+    width: 450px;
     height: auto;
-    display: block
+    display: flex;
+    background-color: #FFC531;
+    padding: 50px;
+    margin-left: 14.5%;
+    border-radius: 10px;
+    flex-direction: column;
+}
+
+.image-container{
+    width: 420px;
+    height: 500px;
+    flex-direction: column;
+}
+
+.image-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-radius: 10px;
+}
+
+.benefits-container {
+    background-color: #FF932F;
+    padding: 30px;
+    border-radius: 10px;
+    width: 925px;
+    height: 300px;
+    margin-left: 14.5%;
+    display: flex;
+    justify-content: space-between; /* Distributes space between child elements */
+    align-items: center; /* Centers child elements vertically */
+}
+
+.benefits-container .big-benefits, 
+.benefits-container .small-benefits {
+    /* display: block; No need to set display: block, as it's default for block-level elements */
+    text-align: left; /* Align text inside child elements */
+}
+
+.small-benefits {
+    padding-top: 2%;
+}
+
+.divider{
+    background-color: #FEFCEF;
+    color: #2E2000;
+    text-align: center;
+}
+
+.divider ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.divider ul li{
+    display: inline-block;
 }
